--- a/debian/changelog
+++ b/debian/changelog
@@ -40,8 +40,9 @@ ikiwiki (1.22) UNRELEASED; urgency=low
   * Factor out the cgi header printing code into a new function.
   * Fix preferences page on anonok wikis; still need to sign in to get
     to the preferences page.
+  * Add toc (table of contents) plugin.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 27 Aug 2006 16:17:21 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 28 Aug 2006 02:31:56 -0400
 
 ikiwiki (1.21) unstable; urgency=low
 
