--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -86,7 +86,7 @@ The above are the core design goals and features of ikiwiki, but on that
 foundation a lot of other important features are added. Here is an
 incomplete list of some of them.
 
-## [[Tags]]
+### [[Tags]]
 
 You can tag pages and use these tags in various ways. Tags will show
 up in the ways you'd expect, like at the bottom of pages, in blogs, and
