--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -75,7 +75,7 @@ and more. Most of ikiwiki's features are actually provided by plugins.
 Ikiwiki's backend RCS support is also pluggable, so support for new
 revision control systems can be added to ikiwiki.
 
-### [[todo/utf8]]
+## [[todo/utf8]]
 
 After rather a lot of fiddling, we think that ikiwiki correctly and fully
 supports utf8 everywhere.
