web commit by JamesWestby

--- a/doc/todo/blogging.mdwn
+++ b/doc/todo/blogging.mdwn
@@ -104,3 +104,9 @@ showing full entries to that number.
 <http://jameswestby.net/scratch/limit.diff>
 
 -- JamesWestby
+
+And here is the updated podcast patch supporting any file type.
+
+<http://jameswestby.net/scratch/podcast2.diff>
+
+-- JamesWestby
