web commit by JamesWestby

--- a/doc/todo/blogging.mdwn
+++ b/doc/todo/blogging.mdwn
@@ -110,3 +110,16 @@ And here is the updated podcast patch supporting any file type.
 <http://jameswestby.net/scratch/podcast2.diff>
 
 -- JamesWestby
+
+And here is a patch for the remaining item. It adds links to the bottom of
+inlined entries for edit and discuss (if they are enabled). It doesn't add
+links for edit if the filetype is not known. 
+
+The stylesheet should probably be done slightly better than I have. I just
+added a bit of spacing as the links were too close to the date. I have no
+skill in this area though. Perhaps you would like to use the list system 
+that you have for the links at the top.
+
+<http://jameswestby.net/scratch/actions.diff>
+
+-- JamesWestby
