web commit by JamesWestby

--- a/doc/todo/adding_new_pages_by_using_the_web_interface.mdwn
+++ b/doc/todo/adding_new_pages_by_using_the_web_interface.mdwn
@@ -20,6 +20,11 @@ included there. Won't work for subpages though, unless the directive were
 added to the parent page. However, unconnected subpages are surely an even
 rarer thing to want than unconnected top level pages. --[[Joey]]
 
+> Here is a simple plugin that does that. Perhaps options could be added to
+> it, but I couldn't really think of any.
+> <http://jameswestby.net/scratch/create.diff>
+> -- JamesWestby
+
 Maybe a very simple PHP frontend for serving the
 statically generated pages, that would display a page editing form or
 something like that for non-existent pages, wouldn't be too bad a thing
