--- a/debian/changelog
+++ b/debian/changelog
@@ -41,8 +41,9 @@ ikiwiki (1.22) UNRELEASED; urgency=low
   * Fix preferences page on anonok wikis; still need to sign in to get
     to the preferences page.
   * Add toc (table of contents) plugin.
+  * Change htmlize, format, and sanitize hooks to use named parameters.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 28 Aug 2006 02:31:56 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 28 Aug 2006 13:59:29 -0400
 
 ikiwiki (1.21) unstable; urgency=low
 
