* Patch from James Westby to add an actions option to inline; this   adds Edit and Discussion links at the end of blog entries.

--- a/debian/changelog
+++ b/debian/changelog
@@ -42,8 +42,10 @@ ikiwiki (1.22) UNRELEASED; urgency=low
     to the preferences page.
   * Add toc (table of contents) plugin.
   * Change htmlize, format, and sanitize hooks to use named parameters.
+  * Patch from James Westby to add an actions option to inline; this
+    adds Edit and Discussion links at the end of blog entries.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 28 Aug 2006 13:59:29 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 28 Aug 2006 15:29:14 -0400
 
 ikiwiki (1.21) unstable; urgency=low
 
