--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -1,3 +1,4 @@
 Welcome to ikiwiki's todo list. Link items to [[todo/done]] when done.
 
-[[inline pages="todo/* and !todo/done and !link(todo/done) and !*/Discussion" rootpage="todo" show="0"]]
+[[inline pages="todo/* and !todo/done and !link(todo/done) and !*/Discussion"
+actions=yes rootpage="todo" show=0]]
