--- a/doc/todo/blogging.mdwn
+++ b/doc/todo/blogging.mdwn
@@ -1,4 +1,3 @@
-- Add Discussion and Edit links at the bottom of each inlined post.
 - It would be possible to support rss enclosures for eg, podcasts, pretty easily. 
 
 Here is the last of those items. Using the meta plugin you can give the appropriate 
@@ -123,3 +122,6 @@ that you have for the links at the top.
 <http://jameswestby.net/scratch/actions.diff>
 
 -- JamesWestby
+
+> Thanks! I did tweak the css a bit. Not totally happy with it, but pretty
+> good I think. --[[Joey]]
