--- a/doc/todo/blogging.mdwn
+++ b/doc/todo/blogging.mdwn
@@ -124,4 +124,4 @@ that you have for the links at the top.
 -- JamesWestby
 
 > Thanks! I did tweak the css a bit. Not totally happy with it, but pretty
-> good I think. --[[Joey]]
+> good I think. (I'll try to get to the other patches soon.) --[[Joey]]
