--- a/doc/todo/rss_title_description.mdwn
+++ b/doc/todo/rss_title_description.mdwn
@@ -7,24 +7,24 @@ though I don't think it needs to be.
 
 A few pointers and I might be able to implement this myself. -- JamesWestby
 
-	I don't see any problem with the title, it's the same as the title
-	of the wiki page that the rss feed comes from, which can be set
-	using the meta plugin. There are no restrictions to one word or
-	anything like that. Just made ikiwiki emit the following in a test
-	feed:
+> I don't see any problem with the title, it's the same as the title
+> of the wiki page that the rss feed comes from, which can be set
+> using the meta plugin. There are no restrictions to one word or
+> anything like that. Just made ikiwiki emit the following in a test
+> feed:
 
-		<title>billy bob&#39;s news</title>
+> > <title>billy bob&#39;s news</title>
 
-	Now, the description field currently defaults to the wiki name,
-	and that could indeed stand to be made configurable. Since the
-	current (svn) version of ikiwiki supports long, word-wrapped
-	blocks of text as parameters to [[PreProcessorDirective]]s, seems
-	to me the best way would be to simple modify inline.pm to make the
-	descripion configurable by such parameter, with a fallback to the
-	wiki name. You'll need to modify rsspage.tmpl to use whatever new
-	template variable you define, that should be all.
+> Now, the description field currently defaults to the wiki name,
+> and that could indeed stand to be made configurable. Since the
+> current (svn) version of ikiwiki supports long, word-wrapped
+> blocks of text as parameters to [[PreProcessorDirective]]s, seems
+> to me the best way would be to simple modify inline.pm to make the
+> descripion configurable by such parameter, with a fallback to the
+> wiki name. You'll need to modify rsspage.tmpl to use whatever new
+> template variable you define, that should be all.
 
-	--[[Joey]]
+> --[[Joey]]
 
 Apologies for the title thing. I tried it yesterday, and it onlt used the first word.
 I must have done something wrong. I'll have a look at implementing the description.
@@ -32,4 +32,4 @@ Thanks. -- JamesWestby
 
 My patch can be found at <http://jameswestby.net/scratch/blog-desc.diff> -- JamesWestby
 
-	Thanks, [[todo/done]] --[[Joey]]
+> Thanks, [[todo/done]] --[[Joey]]
