--- a/doc/todo/blogging.mdwn
+++ b/doc/todo/blogging.mdwn
@@ -104,6 +104,10 @@ showing full entries to that number.
 
 -- JamesWestby
 
+> I removed it because I don't really see the need for it anymore.
+> The added complexity doesn't seem worth it, unless someone needs the
+> features. --[[Joey]]
+
 And here is the updated podcast patch supporting any file type.
 
 <http://jameswestby.net/scratch/podcast2.diff>
