--- a/debian/changelog
+++ b/debian/changelog
@@ -42,8 +42,9 @@ ikiwiki (1.22) UNRELEASED; urgency=low
     adds Edit and Discussion links at the end of blog entries.
   * Due to some css changes, you'll want to rebuild your wiki on upgrade
     to this version. Will be handled automatically by the deb.
+  * Add processed date to aggregate preprocessor directive status output.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 28 Aug 2006 15:29:14 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri,  1 Sep 2006 21:58:08 -0400
 
 ikiwiki (1.21) unstable; urgency=low
 
