--- a/doc/plugins/aggregate.mdwn
+++ b/doc/plugins/aggregate.mdwn
@@ -44,10 +44,11 @@ directive:
 * `updateinterval` - How often to check for new posts, in minutes. Default
   is 15 minutes.
 * `expireage` - Expire old items from this blog if they are older than
-  a specified number of days. Default is to never expire on age.
+  a specified number of days. Default is to never expire on age. (Not yet
+  implemented.)
 * `expirecount` - Expire old items from this blog if there are more than
   the specified number total. Oldest items will be expired first. Default
-  is to never expire on count.
+  is to never expire on count. (Not yet implemented.)
 * `tag` - A tag to tag each post from the blog with. A good tag to use is
   the name of the blog. Can be repeated multiple times. The [[tag]] plugin
   must be enabled for this to work.
