--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.22) UNRELEASED; urgency=low
+ikiwiki (1.22) unstable; urgency=low
 
   * Change how the stylesheet url is determined in the templates: Remove
     STYLEURL and add BASEURL to all templates (some already had it). This
@@ -44,7 +44,7 @@ ikiwiki (1.22) UNRELEASED; urgency=low
     to this version. Will be handled automatically by the deb.
   * Add processed date to aggregate preprocessor directive status output.
 
- -- Joey Hess <joeyh@debian.org>  Fri,  1 Sep 2006 21:58:08 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri,  1 Sep 2006 22:03:34 -0400
 
 ikiwiki (1.21) unstable; urgency=low
 
