--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (1.23) unstable; urgency=low
+
+  * Allow inline directives to be nested inside eg, sidebars. Closes: #385512
+
+ -- Joey Hess <joeyh@debian.org>  Sun,  3 Sep 2006 12:14:45 -0400
+
 ikiwiki (1.22) unstable; urgency=low
 
   * Change how the stylesheet url is determined in the templates: Remove
