--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-ikiwiki (1.24) UNRELEASED; urgency=low
+ikiwiki (1.24) unstable; urgency=low
 
   * Simplify the data structure returned by rcs_recentchanges to avoid
     each rcs plugin needing to form complex strings on its own.
   * Fix another destpage issue in the inline directive. Closes: #385512
     again.
 
- -- Joey Hess <joeyh@debian.org>  Sun,  3 Sep 2006 15:45:58 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun,  3 Sep 2006 15:46:45 -0400
 
 ikiwiki (1.23) unstable; urgency=low
 
