--- a/doc/bugs/PREFIX_not_honoured_for_underlaydir.mdwn
+++ b/doc/bugs/PREFIX_not_honoured_for_underlaydir.mdwn
@@ -17,14 +17,14 @@ Can't stat /usr/share/ikiwiki/basewiki: No such file or directory
 The PREFIX specified at build time should also affect the share directory -
 it shouldn't try to use /usr/share here.
 
-	Actually, the PREFIX, no matter where you specify it, is only
-	intended to control where files are _installed_, not where they're
-	looked for at runtime.
+> Actually, the PREFIX, no matter where you specify it, is only
+> intended to control where files are _installed_, not where they're
+> looked for at runtime.
 
-	There's a good reason not to make PREFIX be used to actually
-	change the program's behavior: Most packaging systems use PREFIX
-	when building the package, to make it install into a temporary
-	directory which gets packaged up.
+> There's a good reason not to make PREFIX be used to actually
+> change the program's behavior: Most packaging systems use PREFIX
+> when building the package, to make it install into a temporary
+> directory which gets packaged up.
 
 This is not the case.  That is the difference between PREFIX and DESTDIR.
 
@@ -41,4 +41,4 @@ isn't entirely clear (perhaps because ordinary Perl modules do not need to be
 configured at build time depending on the installation directory).  It does mention
 that DESTDIR is the thing used by packaging tools.
 
-	Thanks for clarifying that. [[bugs/done]] --[[Joey]]
+> Thanks for clarifying that. [[bugs/done]] --[[Joey]]
