* Add support for tla, contributed by Clint Adama. Closes: #385936

--- a/doc/install.mdwn
+++ b/doc/install.mdwn
@@ -9,6 +9,8 @@ installed, and also uses the following perl modules if available:
 `HTML::Template` `Mail::Sendmail` `Time::Duration` `Date::Parse`,
 `HTML::Scrubber`, `RPC::XML`, `XML::Simple`, `XML::Feed`.
 
+The [[tla]] support also needs the `MailTools` perl module.
+
 Various [[plugins]] use other libraries and utlities; see their individual
 documentation for details.
 
