--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -10,9 +10,9 @@ that are not possible with a standard wiki.
 
 Instead of editing pages in a stupid web form, you can use vim and commit
 changes via svn. Or work disconnected using svk and push your changes out
-when you come online. Or use git to work in a distributed fashion all the
-time. (It's also possible to [[plugins/write]] a plugin to support other
-systems.)
+when you come online. Or use git or tla to work in a distributed fashion
+all the time. (It's also possible to [[plugins/write]] a plugin to support
+other systems.)
 
 ikiwiki can be run from a [[post-commit]] hook to update your wiki
 immediately whenever you commit.
