--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -2,7 +2,7 @@
 ikiwiki is a **wiki compiler**. It converts wiki pages
 into html pages suitable for publishing on a website. Unlike a traditional
 wiki, ikiwiki does not have its own means of storing page history.
-Instead it can use [[Subversion]] (or [[Git]]).
+Instead it can use [[Subversion]] (or [[Git]] or [[tla]]).
 
 * [[News]] is a blog (built using ikiwiki) of news items about ikiwiki.
   It's the best way to find out when there's a new version to [[Download]].
