--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -24,7 +24,7 @@ Released 29 April 2006.
 * Improved scalable [[logo]]. _(status: done)_
 * Support for at least one RCS aside from svn. Once it supports two, it should
   quickly grow to support them all.. See [[about_rcs_backends]]
-  _(status: supports git in tree)_
+  _(status: supports git and tla in tree)_
 * Support for one other markup language, probably restructured text.
   _(status: done, but the rst plugin needs improvement)_
 * No serious known [[bugs]]
