--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,7 @@ ikiwiki (1.25) UNRELEASED; urgency=low
     zombies; this hit htmltidy especially badly.
   * Drop real uid/gid in the suid wrapper, thus allowing commits to remote
     subversion repos and fixing some other issues.
-  * Add support for tla, contributed by Clint Adama. Closes: #385936
+  * Add support for tla, contributed by Clint Adams. Closes: #385936
 
  -- Joey Hess <joeyh@debian.org>  Mon,  4 Sep 2006 01:33:17 -0400
 
