--- a/doc/todo/RSS_links.mdwn
+++ b/doc/todo/RSS_links.mdwn
@@ -1,1 +1,1 @@
-The RSS feeds on a page should be indicated with <link rel>, so that they can be found by aggregators.
+The RSS feeds on a page should be indicated with &lt;link rel&gt;, so that they can be found by aggregators.
