--- a/doc/recentchanges.mdwn
+++ b/doc/recentchanges.mdwn
@@ -1,3 +1,4 @@
 ikiwiki generates the list of recent changes by examining the
-[[Subversion]] or [[Git]] commit log. You have to have [[CGI]] set up for
-this feature to be enabled.
+history of the revision control system ([[Subversion]], etc) that the wiki
+is configured to use. You have to have [[CGI]] set up for this feature to be
+enabled.
