--- a/doc/git.mdwn
+++ b/doc/git.mdwn
@@ -1,4 +1,4 @@
-Git is a distributed revison control system originally developed for the linux kernel. Ikiki supports storing a wiki in git.
+Git is a distributed revison control system originally developed for the linux kernel. Ikiwiki supports storing a wiki in git.
 
 Ikiwiki can run as a post-update hook to update a wiki whenever commits
 come in. When running as a [[cgi]] with Git, ikiwiki automatically
